--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Nguyen Quoc Khanh",
   "license": "ISC",
   "dependencies": {
+    "babel-cli": "^6.26.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "mongoose": "^5.4.20",
