--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "babel-node index.js"
+    "start": "./index.js --exec babel-node -e js"
   },
   "author": "Nguyen Quoc Khanh",
   "license": "ISC",
